attached_assets/Pasted-Module-build-failed-from-node-modules-babel-loader-lib-index-js-SyntaxError-home-runner-work-1755780144750_1755780144750.txt
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/runner/workspace/legal-port/src/services/lawyerService.ts: Missing catch or finally clause. (150:4)

[0m [90m 148 |[39m   
 [90m 149 |[39m   [36mreturn[39m onSnapshot(lawyersRef[33m,[39m [36masync[39m (snapshot) [33m=>[39m {
[31m[1m>[22m[39m[90m 150 |[39m     [36mtry[39m {
 [90m     |[39m     [31m[1m^[22m[39m
 [90m 151 |[39m       [36mconst[39m lawyerPromises [33m=[39m snapshot[33m.[39mdocs[33m.[39mmap([36masync[39m (doc) [33m=>[39m {
 [90m 152 |[39m         [36mconst[39m data [33m=[39m doc[33m.[39mdata()[33m;[39m
 [90m 153 |[39m[0m
    at constructor (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.parseTryStatement (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:13224:12)
    at TypeScriptParserMixin.parseStatementContent (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12804:21)
    at TypeScriptParserMixin.parseStatementContent (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseStatementListItem (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12747:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:13316:61)
    at TypeScriptParserMixin.parseBlockBody (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseBlock (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:13297:10)
    at TypeScriptParserMixin.parseFunctionBody (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12101:24)
    at TypeScriptParserMixin.parseArrowExpression (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12076:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11259:10)
    at TypeScriptParserMixin.parseAsyncArrowFromCallExpression (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9781:18)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11189:27)
    at TypeScriptParserMixin.parseSubscript (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11115:19)
    at TypeScriptParserMixin.parseSubscript (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9353:18)
    at TypeScriptParserMixin.parseSubscripts (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11089:19)
    at TypeScriptParserMixin.parseExprSubscripts (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11080:17)
    at TypeScriptParserMixin.parseUpdate (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9801:20)
    at /home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10795:39
    at TypeScriptParserMixin.allowInAnd (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12427:12)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10795:17)
    at TypeScriptParserMixin.parseMaybeAssignAllowInOrVoidPattern (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12494:17)
    at TypeScriptParserMixin.parseExprListItem (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12176:18)
    at TypeScriptParserMixin.parseCallExpressionArguments (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11247:22)
    at TypeScriptParserMixin.parseCoverCallAndAsyncArrowHead (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11181:29)
    at TypeScriptParserMixin.parseSubscript (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11115:19)
    at TypeScriptParserMixin.parseSubscript (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9353:18)
    at TypeScriptParserMixin.parseSubscripts (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11089:19)
    at TypeScriptParserMixin.parseExprSubscripts (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11080:17)
    at TypeScriptParserMixin.parseUpdate (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:9801:20)
    at TypeScriptParserMixin.parseExpressionBase (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10779:23)
    at /home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10775:39
    at TypeScriptParserMixin.allowInAnd (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:12422:16)
    at TypeScriptParserMixin.parseExpression (/home/runner/workspace/legal-port/node_modules/@babel/parser/lib/index.js:10775:17)